Fix navigation content clipping

--- a/src/assets/sass/modules/_navigation.scss
+++ b/src/assets/sass/modules/_navigation.scss
@@ -77,7 +77,7 @@
     }
 
     &.site-navigation-open {
-        max-height: 16.1875em;
+        max-height: 17em;
         transition: max-height 0.33s ease-in-out;
     }
 }
